--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,13 +21,7 @@
 
   <%= render partial: "navigation" %>
 
-  <div class="followers-col">
-    <%= link_to "#{@user_tweets.count} Tweets", users_path, method: :get %></br>
-    <%= link_to "Following #{@following.count} user", following_users_path, method: :get %></br>
-    <%= link_to "#{@follower.count} Followers", follower_users_path, method: :get %></br>
-    <strong> Total likes</strong></br>
-  </div>
-
+  <%= render partial: "counter" %>
 
 </div>
 
