--- a/app/views/tweets/likelist.html.erb
+++ b/app/views/tweets/likelist.html.erb
@@ -1,25 +1,22 @@
 <div class="user-index-container">
 
-  <%= render partial: "avatar" %>  
+  <%= render partial: "users/avatar" %>  
 
-  <%= render partial: "trending" %>  
+  <%= render partial: "users/trending" %>  
 
   <div class="tweets-col">
-    <% if flash[:notice] %>
-      <div class="notice"><%= flash[:notice] %></div>
-    <% end %>
+    <div class="card">
+      <strong>You liked these tweets</br></strong>
 
-    <% if flash[:alert] %>
-      <div class="alert"><%= flash[:alert] %></div>
-    <% end %>
+        <% @like_tweets.each do |like| %>
+          <p class="tweet-date"><strong><%= like.created_at.strftime("%a %e %b %Y") %>&nbsp<%= like.created_at.strftime("%I:%M%p") %></strong></p>
+          <p class="tweet-text"><%= like.tweet %></p>
+        <% end %>
 
-    <div id = 'tweets_list_table'>
-      <%= render partial: "tweetslist" %>
     </div>
-
   </div>
 
-  <%= render partial: "navigation" %>
+  <%= render partial: "users/navigation" %>
 
   <div class="followers-col">
     <%= link_to "#{@user_tweets.count} Tweets", users_path, method: :get %></br>
@@ -28,14 +25,13 @@
     <%= link_to "#{@like_tweets.count} Likes", likelist_user_tweets_path(@user), method: :get %></br>
   </div>
 
-
 </div>
 
 
 <!-- The Modal -->
 <div id="editProfileModal" class="modal">
 
-    <%= render partial: "edit_profile_form" %>
+    <%= render partial: "users/edit_profile_form" %>
 
 </div>
 
