--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,7 +1,36 @@
+<div class="container">
+  <div class="row">
 
-User ID: <%= @tweet.user_id %>
-Tweet: <%= @tweet.tweet %><br>
-<%= image_tag @tweet.image, width: '500px' %>
+    User ID: <%= @tweet.user_id %>
+    Tweet: <%= @tweet.tweet %><br>
+    <%= image_tag @tweet.image, width: '500px' %>
+    <br />
+  </div>
+  
+  <div class="row form-replies">
+    <%= form_for @reply, url: user_tweet_replies_path(current_user, @tweet) do |f| %>
+      <div class="form-group">
+        <%= f.text_area :reply, placeholder: "Leave your reply here...", :cols => "100%", :rows => "2", class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit class: "btn btn-primary" %>
+        <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
+      </div>
+    <% end %>
+  </div>
+
+
+  <div class="row row-replies">
+    <% @tweet.replies.each do |reply| %>
+      <p class="reply-date text-muted"><%= reply.created_at.strftime("%a %e %b %Y") %>&nbsp<%= reply.created_at.strftime("%I:%M%p") %></p>
+      <p class="reply-text"><strong><%= reply.reply %></strong></p>
+      <% if current_user %>
+        <%= link_to "Delete", user_tweet_reply_path(current_user, @tweet, reply), method: :delete %>
+      <% end %>
+    <% end%>
+  </div>
+<br />
 <br />
 
 <%= link_to 'Back to index', tweets_path %>
+</div>
