Post demo enhancements

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,17 +16,21 @@
   background-color: orange;
   padding: 1em;
   border-radius: 2em;
-  height: 160px;
+  height: 170px;
   display: flex;
   justify-content: center;
 }
 
 .avatar-pic{
   border: 10px;
-  height: 120px;
-  width: 120px;
+  height: 9em;
+  width: 9em;
   border: 2px solid black;
   border-radius: 50%;
+}
+
+.avatar-pic-pos{
+  padding: 0 0.5em 0 0;
 }
 
 .avatar-pic-for-like{
@@ -38,16 +42,13 @@
 }
 
 .avatar-name{
-  padding: 0.2em;
-  font-size: 1.5em;
+  font-size: 2vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .avatar-handlename{
-  padding: 0.2em;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 
 .edit-profile-container{
   display: grid;
@@ -57,6 +58,14 @@
   margin-top: 10vh;
   grid-template-columns: 1fr;
   grid-template-areas: "pdetails"
+}
+
+.edit-profile-pic{
+  border: 10px;
+  height: 120px;
+  width: 120px;
+  border: 2px solid black;
+  border-radius: 50%;
 }
 
 .edit-profile-pdetails{
@@ -90,7 +99,7 @@
 }
 
 .edit-profile-btn{
-  padding: 0.2em 1.2em 0.2em 1.2em;
+  padding: 0.2em 0.5em 0.2em 0.5em;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   font-size: 1em;
@@ -246,8 +255,9 @@
 
 .search-header{
   color: #43a0e7;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 500;
+  text-align: center;
 }
 
 .result-table{
