--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -5,19 +5,16 @@
   <%= render partial: "trending" %>  
 
   <div class="tweets-col">
-    <div class="search-header">You have searched for <b><%= params[:q] %></b></div>
-
     <% if @user_searches.empty? %>
-      <strong>No Users found, please try again</strong></br>
+      <div class="search-header">No users found, please try again</div>
     <% else%>
+      <div class="search-header">Search has retrieved the following users</div>
 
     <% following_array = []%>
     <% @follower_counter.each do |test| %>
 
       <% if test.follower_id == current_user.id %>
-
         <% following_array << test.following_id %>
-
       <% end %>
 
     <% end %>
@@ -26,7 +23,11 @@
         
         <% @user_searches.each do |f| %>
           <tr>
-            <td class="result-table-td-avatar"><%= image_tag f.img, class: "avatar-pic" %></td>
+            <% if f.img? %>
+              <td class="result-table-td-avatar"><%= image_tag f.img, class: "avatar-pic" %></td>
+            <% else %>
+              <td class="result-table-td-avatar"><%= image_tag('/assets/MissingProfile.jpg', class: "avatar-pic") %></td>
+            <% end %>
             <td class="result-table-td-profile"><div class="result-table-td-name"><%= f.name%></div>
               @<%= f.handlename%>
               
@@ -39,29 +40,23 @@
                 <% end %>
               <%= submit_tag 'View Profile', class: "view-profile" %>
               <% end %>
-              
             </td>
+
             <td align="right" class="result-table-td-follow">
               <% if following_array.include?(f.id) %>
-              
                 <%= form_tag unfollow_users_path, method: :post do %>
                 <%= hidden_field_tag :follow, current_user.id %>
                 <%= hidden_field_tag :following, f.id %>
                 <%= submit_tag 'Following', class: "following-button" %>
                 <% end %>
-              
               <% else %>
-
                 <%= form_tag follow_users_path, method: :post do %>
                 <%= hidden_field_tag :follow, current_user.id %>
                 <%= hidden_field_tag :following, f.id.to_s %>
                 <%= submit_tag 'Follow', class: "follow-button" %>
                 <% end %>
-
               <% end %>
-
             </td>
-           
           </tr>
 
         <% end %>
@@ -73,18 +68,41 @@
     </br>
 
     <% if @tweet_searches.empty?%>
-      <strong>No Tweets found</strong>
+      <div class="search-header">No Tweets found, please try again</div>
     <% else %>
-      Located the following tweets containing <b><%= params[:q] %></b>
+      <div class="search-header">Search has retrieved the following Tweets</div>
       <% @tweet_searches.each do |s| %> 
 
         <div class="card">
           <div class="card-block">
-            <p class="tweet-date"><%= s.created_at.strftime("%a %e %b %Y") %>&nbsp<%= s.created_at.strftime("%I:%M%p") %></p>
-            <p class="tweet-text"><%= s.tweet %></p>  
+            <table>
+              <tr>
+                <td class="tweet-pic-align">
+                  <%= image_tag s.user.img, class: "avatar-pic-for-like" %>
+                </td>
+
+                <td class="tweet-details-align">
+                  <strong><%= s.user.name %></strong> <span class="tweet-name">@<%= s.user.handlename %>  · <%= s.created_at.strftime("%e %b") %> </span></br>
+                  <%= s.tweet %></br>
+                  <%= image_tag s.image, width: '300em' if s.image? %></br>
+                  <p class="options">
+                    <%= link_to 'Reply', tweet_path(s), class: "btn btn-outline-primary btn-sm" %>
+                    <%= link_to 'Show', tweet_path(s), class: "btn btn-outline-primary btn-sm" %>
+                    <% if s.user.id == current_user.id %>
+                      <%= link_to 'Edit', edit_tweet_path(s), class: "btn btn-outline-primary btn-sm" %>
+                      <%= link_to 'Delete', tweet_path(s), method: :delete, data: {confirm:"Are you sure?"}, remote: true, class: "btn btn-outline-primary btn-sm" %>
+                    <% end %>
+                  <% if s.likes.any? { |like| like.user == current_user } %>
+                    <%= link_to image_tag("filled.svg"), dislike_user_tweet_path(@user, s), method: :delete, remote: true %>
+                  <% else %>
+                    <%= link_to image_tag("not_filled.svg"), like_user_tweet_path(@user, s), method: :post, remote: true %>
+                  <% end %>
+                  </p>
+                </td>
+              </tr>
+            </table>
           </div>
-          <%= image_tag s.image, width: '300em' if s.image? %>
-        </div>  <br />
+        </div>
 
       <% end %>
     <% end %>
@@ -97,35 +115,4 @@
 
 </div>
 
-
-<!-- The Modal -->
-<div id="editProfileModal" class="modal">
-
-    <%= render partial: "edit_profile_form" %>
-
-</div>
-
-<script>
-
-// Get the modal
-const modalEdit = document.getElementById('editProfileModal');
-
-// Get the button that opens the modal
-const btnEdit = document.getElementById("editProfile");
-
-// Get the <span> element that closes the modal
-const span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btnEdit.onclick = function() {
-    modalEdit.style.display = "block";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modalEdit) {
-        modalEdit.style.display = "none";
-    }
-}
-
-</script>
+  <%= render partial: "edit_profile_form" %>
