--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the tweets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tweet-pic-align{
+  vertical-align: top;
+  padding: 0.5em 0 0 0.5em;
+}
+
+.tweet-details-align{
+  padding: 0.5em 0.5em 0 0.5em;
+}
+
+.tweet-name{
+  color: grey;
+}
+
+.expand {
+  height: 2em;
+  width: 100%;
+  padding: 3px;
+}
