--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @tweet, url: user_tweets_path(current_user), method: :post do |f| %>
-  <%= f.text_area :tweet, :cols => "43", :rows => "5", placeholder: "Enter your tweet here..." %>
+  <%= f.text_area :tweet, class: "expand", placeholder: "What's happening?" %></br>
 
 <%= image_tag @tweet.image, width: '300px' if @tweet.image? %>
 <label class="btn btn-light btn-sm">
@@ -11,3 +11,16 @@
 
   <%= f.submit :class => "btn btn-primary" %>
 <% end %>
+
+<script>
+
+$('textarea').click(function () {
+    $(this).animate({ height: "6em"}, 200); 
+});
+
+
+//$(document).click(function(){
+//    $('textarea').animate({ height: "2em"}, 200); 
+//});
+
+</script>
