--- a/app/views/users/_tweetslist.html.erb
+++ b/app/views/users/_tweetslist.html.erb
@@ -5,24 +5,33 @@
 
   <div class="card">
     <div class="card-block">
-      <p class="tweet-date"><strong><%= tweet.created_at.strftime("%a %e %b %Y") %>&nbsp<%= tweet.created_at.strftime("%I:%M%p") %></strong></p>
-      <p class="tweet-text"><%= tweet.tweet %></p>
+    <table>
+      <tr>
+        <td class="tweet-pic-align">
+          <%= image_tag tweet.user.img, class: "avatar-pic-for-like" %>
+        </td>
 
-      <%= image_tag tweet.image, width: '300em' if tweet.image? %>
-      
-      <p class="options-text"><small class="text-muted">
-      <%= link_to 'Reply', tweet_path(tweet), class: "btn btn-outline-primary btn-sm" %>
-      <%= link_to 'Show', tweet_path(tweet), class: "btn btn-outline-primary btn-sm" %>
-      <%= link_to 'Edit', edit_tweet_path(tweet), class: "btn btn-outline-primary btn-sm" %>
-      <%= link_to 'Delete', tweet_path(tweet), method: :delete, data: {confirm:"Are you sure?"}, remote: true, class: "btn btn-outline-primary btn-sm" %>
+        <td class="tweet-details-align">
+          <strong><%= tweet.user.name %></strong> <span class="tweet-name">@<%= tweet.user.handlename %>  · <%= tweet.created_at.strftime("%e %b") %> </span></br>
+          <%= tweet.tweet %></br>
+          <%= image_tag tweet.image, width: '300em' if tweet.image? %></br>
+          <p class="options">
+            <%= link_to 'Reply', tweet_path(tweet), class: "btn btn-outline-primary btn-sm" %>
+            <%= link_to 'Show', tweet_path(tweet), class: "btn btn-outline-primary btn-sm" %>
+            <%= link_to 'Edit', edit_tweet_path(tweet), class: "btn btn-outline-primary btn-sm" %>
+            <%= link_to 'Delete', tweet_path(tweet), method: :delete, data: {confirm:"Are you sure?"}, remote: true, class: "btn btn-outline-primary btn-sm" %>
         
-      <% if tweet.likes.any? { |like| like.user == current_user } %>
-        <%= link_to image_tag("filled.svg"), dislike_user_tweet_path(@user, tweet), method: :delete, remote: true %>
-      <% else %>
-        <%= link_to image_tag("not_filled.svg"), like_user_tweet_path(@user, tweet), method: :post, remote: true %>
-      <% end %>
-    </small></p>
+              
+          <% if tweet.likes.any? do |like| like.user == current_user end %>
+            <%= link_to image_tag("filled.svg"), dislike_user_tweet_path(@user, tweet), method: :delete, remote: true %>
+          <% else %>
+            <%= link_to image_tag("not_filled.svg"), like_user_tweet_path(@user, tweet), method: :post, remote: true %>
+          <% end %>
+          </p>
+        </td>
+
+      </tr>
+    </table>
     </div>
   </div>
-  <br />
-  <% end %>
+<% end %>
