--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
       <div class="alert"><%= flash[:alert] %></div>
     <% end %>
 
-    <div id = 'tweets_list_table'>
+    <div id = "tweets_list_table">
       <%= render partial: "tweetslist" %>
     </div>
 
