--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -139,6 +139,15 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.trending-col-link{
+    background:none;
+    color:inherit;
+    border:none; 
+    padding:0;
+    font: inherit;
+    cursor: pointer;
+}
+
 .tweets-col{
   grid-area: tweets;
   margin: 0 1vw 0 1vw;
